--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,8 @@ button {
 
 
 .container {
-    max-width: 600px;
-    margin: 50px auto;
+    max-width: 400px;
+    margin: 30px auto;
     text-align: center;
 }
 
@@ -96,3 +96,63 @@ button {
 #extraOptionBtn{
     display: none;
 }
+
+#header {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+  }
+
+  #emoticon {
+    font-size: 60px; /* Twice the size */
+    align-self: flex-end;
+  } 
+  span, #emoticon {
+    display: inline-block;
+    vertical-align: top; 
+  }
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #1d1d1d;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    color: #818181;
+    font-size: 25px;
+}
+  
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+.sidenav div {
+    color: #f5f5f5;
+    padding: 10px 20px;
+}
+.sidenav input {
+    margin: 10px;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+
+@media (min-width: 900px) {
+    .sidenav {
+      width: 250px;
+    }
+  }
