--- a/styles.css
+++ b/styles.css
@@ -40,18 +40,50 @@ button {
 }
 
 .options {
-    margin-top: 20px;
+    margin-top: 3px;
     display: flex;
     flex-wrap: wrap; /* Allow flex items to wrap */
     justify-content: center;
+    width: 100%
 }
 
 .option-group {
     margin-bottom: 10px;
     flex: 1 0 calc(33.33% - 10px); /* Verdeel de ruimte in drie kolommen en laat een beetje ruimte tussen de elementen */
 }
+.options-frame {
+    border: 2px solid #ccc;
+    padding: 3px;
+    margin: 2px;
+    display: flex;
+    cursor: pointer;
+}
+.options-frame.correct {
+    border: 3px solid green;
+}
+.options-frame.incorrect {
+    border: 3px solid red;
+}
+
+.option.hidden {
+    /*opacity: 0;*/
+    height: 0;
+    border: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    pointer-events: none;
+    transition-property: max-height .6s ease;
+	transition-duration: .6s;
+	transition-timing-function: ease;
+}
+
 
 .option {
+    overflow: hidden; 
+    /*height: 100%;*/
+
     display: block;
     font-size: 1rem;
     padding: 10px 20px;
@@ -77,6 +109,10 @@ button {
     color: #fff;
 }
 
+.option.missed {
+    background-color: #524f50; /* Red color for incorrect answer */
+    color: #fff;
+}
 #checkBtn {
     cursor: pointer;
 
@@ -89,9 +125,13 @@ button {
     background-color: #0056b3;
 }
 
-#extraOptions {
+.options-frame:not(:first-of-type) {
     display: none;
 }
+.options-frame{
+    display: flex;
+}
+
 
 #extraOptionBtn{
     display: none;
@@ -158,3 +198,39 @@ span, #emoticon {
       
     }
   }
+
+  
+  .button-with-x {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: transparent;
+    color: red;
+    font-size: 16px;
+    border: 3px solid red;
+    text-align: center;
+  }
+  
+  .button-with-x::before,
+  .button-with-x::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .button-with-x::before {
+    background: linear-gradient(to bottom right, transparent 49.5%, red 49.5%, red 50.5%, transparent 50.5%);
+  }
+  
+  .button-with-x::after {
+    background: linear-gradient(to bottom left, transparent 49.5%, red 49.5%, red 50.5%, transparent 50.5%);
+  }
+
+  #nextBtn{
+    display: none;
+  }
+  
+  
