--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,23 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+       
+    display: flex;
+    justify-content: center;
 }
 
 .menucontainer {
     display: flex;
     margin-top: 10vh;
-        
+      
 }
 .column {
     flex: 1;
     text-align: center;
+}
+
+.menuButton{
+    width: auto;
 }
 
 button {
@@ -207,6 +214,9 @@ span, #emoticon {
     .sidenav {
       width: 250px;
       display: none;
+    }
+    .sidenav.show {
+        display: block;
     }
   }
 
