Major release. Multiselect added and unlimited answers.

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,12 @@ body {
     display: flex;
     justify-content: center;
 }
+input{
+    cursor: pointer;
+}
+label{
+    cursor: pointer;
+}
 
 .menucontainer {
     display: flex;
@@ -24,12 +30,22 @@ body {
 button {
     display: inline-block; /* Change from flex to inline-block */
     padding: 10px 20px; /* Add padding */
-    margin: 5px 10px; /* Add margin */
+  /*  margin: 5px 10px; /* Add margin */
 
     border: none; /* Remove border */
     border-radius: 5px; /* Add border radius */
     cursor: pointer;
-    width: 90%; /* Adjust width to your preference */
+    width: 92%; 
+    box-shadow: 4px 8px 10px 1px rgba(0,0,0,0.2);
+    transition-duration: 0.2s;
+    z-index: 3; 
+    position: relative; 
+
+}
+button.pressed {
+    transform: translateY(2px); /* Move the button 2 pixels down when pressed */
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
+    z-index: 2; 
 }
 
 /* Add a class for the secondary button */
@@ -43,14 +59,18 @@ button {
     border: none;
     border-radius: 5px;
     display: none;
+    width: 100%;
+    justify-content: center;
 }
 
 
 .container {
     max-width: 400px;
-    margin: 30px auto;
+    margin: 10px auto;
     text-align: center;
     display: none;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .word {
@@ -58,7 +78,7 @@ button {
 }
 
 .options {
-    margin-top: 3px;
+    /*margin-top: 3px;*/
     display: flex;
     flex-wrap: wrap; /* Allow flex items to wrap */
     justify-content: center;
@@ -66,7 +86,7 @@ button {
 }
 
 .option-group {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     flex: 1 0 calc(33.33% - 10px); /* Verdeel de ruimte in drie kolommen en laat een beetje ruimte tussen de elementen */
 }
 .options-frame {
@@ -74,7 +94,6 @@ button {
     padding: 3px;
     margin: 2px;
     display: flex;
-    cursor: pointer;
 }
 .options-frame.correct {
     border: 3px solid green;
@@ -84,9 +103,10 @@ button {
 }
 
 .option.hidden {
-    /*opacity: 0;*/
+    display: none;
     height: 0;
     border: none;
+    margin: 0;
     margin-top: 0;
     margin-bottom: 0;
     padding-top: 0;
@@ -100,14 +120,12 @@ button {
 
 .option {
     overflow: hidden; 
-    /*height: 100%;*/
-
     display: block;
     font-size: 1rem;
     padding: 10px 20px;
     margin: 5px auto; /* Center buttons horizontally */
     background-color: #fff;
-    border: 1px solid #ccc;
+    border: 1px solid #0056b3;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -123,12 +141,12 @@ button {
 }
 
 .option.incorrect {
-    background-color: #dc3545; /* Red color for incorrect answer */
+    background-color: #dc3545;
     color: #fff;
 }
 
 .option.missed {
-    background-color: #524f50; /* Red color for incorrect answer */
+    background-color: #28a745; 
     color: #fff;
 }
 #checkBtn {
@@ -143,16 +161,8 @@ button {
     background-color: #0056b3;
 }
 
-.options-frame:not(:first-of-type) {
-    display: none;
-}
 .options-frame{
     display: flex;
-}
-
-
-#extraOptionBtn{
-    display: none;
 }
 
 #header {
@@ -161,9 +171,22 @@ button {
     align-items: top; 
   }
 
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+.rotate {
+    animation: rotate 0.5s linear; /* Apply the rotation animation when the element has the 'rotate' class */
+}
+
 #emoticon {
     font-size: 60px; /* Twice the size */
     align-self: flex-end;
+    transition: transform 0.3s ease-in-out; /* Add a transition for smooth animation */
 } 
 span, #emoticon {
     display: inline-block;
@@ -174,7 +197,7 @@ span, #emoticon {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     top: 0;
     left: 0;
     background-color: #1d1d1d;
@@ -223,13 +246,14 @@ span, #emoticon {
   
   .button-with-x {
     position: relative;
-    display: inline-block;
-    padding: 10px 20px;
+/*    display: inline-block;
+    padding: 10px 20px;*/
     background-color: transparent;
     color: red;
     font-size: 16px;
     border: 3px solid red;
     text-align: center;
+    opacity: 30%;
   }
   
   .button-with-x::before,
@@ -240,6 +264,7 @@ span, #emoticon {
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 5;
   }
   
   .button-with-x::before {
