Griek ww and filtering now removes buttons

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,9 @@ button.selected {
 div.hidden {
     display: none;
 }
+.option.filter {
+    display: none;
+}
 
 .option.hidden {
     display: none;
